--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -41,6 +41,8 @@ jobs:
         run: |
           New-Item -Path .\.sonar\scanner -ItemType Directory
           dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+          dotnet tool list
+          pwd
       - name: Cache dotnet-coverage
         id: cache-dotnet-coverage
         uses: actions/cache@v3
@@ -54,11 +56,14 @@ jobs:
         run: |
           New-Item -Path .\.sonar\coverage -ItemType Directory
           dotnet tool update dotnet-coverage --tool-path .\.sonar\coverage
+          dotnet tool list
+          pwd
       - name: Build and analyze  # Sonar scan
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
         shell: pwsh
         run: |
+          pwd
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"duranserkan_DRN-Project" /o:"duranserkan" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml /d:sonar.host.url="https://sonarcloud.io"
           .\.sonar\coverage\dotnet-coverage collect "dotnet test DRN.Test/DRN.Test.csproj --no-build" -f xml -o "coverage.xml"
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
