--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,15 +13,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Setup .NET # SDK installation
+      - name: Setup .NET # Restore, build, test
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 8.0.x
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: 17
-      - name: Restore dependencies # Restore, build, test
+      - name: Restore dependencies
         run: dotnet restore DRN.sln
       - name: Build
         run: dotnet build DRN.sln --no-restore --no-incremental
