--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,11 +13,16 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Setup .NET # Restore, build, test
+      - name: Setup .NET # SDK Installation
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 8.0.x
-      - name: Restore dependencies
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: 21
+          distribution: 'temurin'
+      - name: Restore dependencies # Restore, build, test
         run: dotnet restore DRN.sln
       - name: Build
         run: dotnet build DRN.sln --no-restore --no-incremental
@@ -49,18 +54,18 @@ jobs:
         run: |
           New-Item -Path ./.sonar/coverage -ItemType Directory
           dotnet tool update dotnet-coverage --tool-path ./.sonar/coverage
-      - name: Cache SonarCloud packages
+      - name: Use sonar cache
         id: cache-sonar
         uses: actions/cache@v3
         with:
-          path: ~\sonar\cache
+          path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
-      - name: Install dotnet-coverage
+      - name: Create sonar cache directory
         if: steps.cache-sonar.outputs.cache-hit != 'true'
         shell: pwsh
         run: |
-          New-Item -Path ~\sonar\cache -ItemType Directory
+          New-Item -Path ~/.sonar/cache -ItemType Directory
       - name: Build and analyze  # Sonar scan
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
