--- a/.github/workflows/actions/sonar-end/action.yml
+++ b/.github/workflows/actions/sonar-end/action.yml
@@ -5,4 +5,4 @@ runs:
     - name: Sonar Scan End
       shell: pwsh
       run: |
-        ./.sonar/scanner/dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+        ./.sonar/scanner/dotnet-sonarscanner end /d:sonar.token="${SONAR_TOKEN}"
