--- a/DRN.Framework.EntityFramework/DRN.Framework.EntityFramework.csproj
+++ b/DRN.Framework.EntityFramework/DRN.Framework.EntityFramework.csproj
@@ -24,6 +24,19 @@
         </None>
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\DRN.Framework.Utils\DRN.Framework.Utils.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
+        <PackageReference Include="EFCore.NamingConventions" Version="8.0.0-rc.2" />
+    </ItemGroup>
+
     <Target Name="PrepareDescription" BeforeTargets="GenerateNuspec">
         <PropertyGroup>
             <PackageDescription>$([System.IO.File]::ReadAllText("$(MSBuildProjectDirectory)/PACKAGE-DESCRIPTION"))</PackageDescription>
