--- a/DRN.Framework.Testing/DRN.Framework.Testing.csproj
+++ b/DRN.Framework.Testing/DRN.Framework.Testing.csproj
@@ -39,12 +39,14 @@
     </Target>
 
     <ItemGroup>
-        <PackageReference Include="AutoFixture.AutoNSubstitute" Version="4.18.0"/>
-        <PackageReference Include="AutoFixture.Xunit2" Version="4.18.0"/>
+        <PackageReference Include="AutoFixture.AutoNSubstitute" Version="4.18.1" />
+        <PackageReference Include="AutoFixture.Xunit2" Version="4.18.1" />
         <PackageReference Include="FluentAssertions" Version="6.12.0"/>
         <PackageReference Include="NSubstitute" Version="5.1.0" />
-        <PackageReference Include="xunit" Version="2.6.2" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.5.4">
+        <PackageReference Include="Testcontainers.PostgreSql" Version="3.6.0" />
+        <PackageReference Include="Testcontainers.RabbitMq" Version="3.6.0" />
+        <PackageReference Include="xunit" Version="2.6.3" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.5.5">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
@@ -52,6 +54,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\DRN.Framework.Utils\DRN.Framework.Utils.csproj"/>
+        <ProjectReference Include="..\DRN.Framework.Utils\DRN.Framework.EntityFramework.csproj"/>
     </ItemGroup>
 
 </Project>
