DrnMigrationsScaffolder overrides default migration location with context specific location

--- a/Sample.Infra/Sample.Infra.csproj
+++ b/Sample.Infra/Sample.Infra.csproj
@@ -10,15 +10,16 @@
     <ProjectReference Include="..\DRN.Framework.EntityFramework\DRN.Framework.EntityFramework.csproj" />
     <ProjectReference Include="..\Sample.Domain\Sample.Domain.csproj" />
   </ItemGroup>
-
+  
+  <ItemGroup>
+    <Folder Include="Repositories\QA\Migrations\" />
+  </ItemGroup>
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Repositories\QA\Migrations\" />
   </ItemGroup>
 
 </Project>
