--- a/DRN.Framework.EntityFramework/DRN.Framework.EntityFramework.csproj
+++ b/DRN.Framework.EntityFramework/DRN.Framework.EntityFramework.csproj
@@ -29,6 +29,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0" PrivateAssets="all"/>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
         <PackageReference Include="EFCore.NamingConventions" Version="8.0.0-rc.2" />
     </ItemGroup>
