--- a/DRN.Framework.Testing/DRN.Framework.Testing.csproj
+++ b/DRN.Framework.Testing/DRN.Framework.Testing.csproj
@@ -21,8 +21,8 @@
             <PackagePath>\</PackagePath>
         </None>
         <None Update="RELEASE-NOTES.md">
-          <Pack>True</Pack>
-          <PackagePath>/</PackagePath>
+            <Pack>True</Pack>
+            <PackagePath>/</PackagePath>
         </None>
     </ItemGroup>
 
@@ -39,13 +39,17 @@
     </Target>
 
     <ItemGroup>
-        <PackageReference Include="AutoFixture.AutoNSubstitute" Version="4.18.1" />
-        <PackageReference Include="AutoFixture.Xunit2" Version="4.18.1" />
+        <PackageReference Include="AutoFixture.AutoNSubstitute" Version="4.18.1"/>
+        <PackageReference Include="AutoFixture.Xunit2" Version="4.18.1"/>
         <PackageReference Include="FluentAssertions" Version="6.12.0"/>
-        <PackageReference Include="NSubstitute" Version="5.1.0" />
-        <PackageReference Include="Testcontainers.PostgreSql" Version="3.6.0" />
-        <PackageReference Include="Testcontainers.RabbitMq" Version="3.6.0" />
-        <PackageReference Include="xunit" Version="2.6.3" />
+        <PackageReference Include="NSubstitute" Version="5.1.0"/>
+        <PackageReference Include="Testcontainers.PostgreSql" Version="3.6.0"/>
+        <PackageReference Include="Testcontainers.RabbitMq" Version="3.6.0"/>
+        <PackageReference Include="xunit" Version="2.6.3"/>
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.5.5">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
