Shared kernel domain models added && sample domain models improved

--- a/Sample.Domain/Sample.Domain.csproj
+++ b/Sample.Domain/Sample.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DRN.Framework.SharedKernel\DRN.Framework.SharedKernel.csproj" />
+  </ItemGroup>
+
 </Project>
