migration naming fixed && new domain models added

--- a/Sample.Domain/Sample.Domain.csproj
+++ b/Sample.Domain/Sample.Domain.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\DRN.Framework.SharedKernel\DRN.Framework.SharedKernel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="QA\QuestionComments\" />
+  </ItemGroup>
+
 </Project>
