--- a/DRN.Framework.EntityFramework/DRN.Framework.EntityFramework.csproj
+++ b/DRN.Framework.EntityFramework/DRN.Framework.EntityFramework.csproj
@@ -31,7 +31,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0" PrivateAssets="all"/>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
-        <PackageReference Include="EFCore.NamingConventions" Version="8.0.0-rc.2" />
+        <PackageReference Include="EFCore.NamingConventions" Version="8.0.0-rc.2" NoWarn="NU5104"/>
     </ItemGroup>
 
     <Target Name="PrepareDescription" BeforeTargets="GenerateNuspec">
