--- a/.github/workflows/actions/dotnet-build/action.yml
+++ b/.github/workflows/actions/dotnet-build/action.yml
@@ -3,8 +3,10 @@ runs:
   using: "composite"
   steps:
     - name: Restore dependencies
+      shell: bash
       run: dotnet restore DRN.sln
     - name: Scan vulnerabilities
       uses: ./.github/workflows/actions/scan-vulnerabilities
     - name: Build solution
+      shell: bash
       run: dotnet build DRN.sln --no-restore --no-incremental --configuration Release /p:Version=${VERSION:=0.0.0}
