--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Build
         uses: ./.github/workflows/actions/dotnet-build
       - name: Test
-        run: dotnet test DRN.Test/DRN.Test.csproj --no-build --verbosity normal
+        uses: ./.github/workflows/actions/dotnet-test-release
       - name: Publish Packages
         uses: ./.github/workflows/actions/nuget-publish-all
