--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -17,3 +17,18 @@ jobs:
         uses: ./.github/workflows/actions/dotnet-build
       - name: Test
         uses: ./.github/workflows/actions/dotnet-test
+  security-scan:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run Trivy vulnerability scanner in fs mode
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          scan-ref: '.'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v2
+        if: always()
+        with:
+          sarif_file: 'trivy-results.sarif'
