--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,6 +16,8 @@ jobs:
       SONAR_ORGANIZATION: duranserkan
     steps:
       - uses: actions/checkout@v4
+      - name: Scan File System Vulnerabilities
+        uses: ./.github/workflows/actions/scan-file-system-vulnerabilities
       - name: Setup SDK
         uses: ./.github/workflows/actions/setup-sdk-and-tools
       - name: Sonar Scan Begin
