--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,13 +17,17 @@ jobs:
           fetch-depth: 0
       - name: Verify commit exists in origin/master
         run: git branch --remote --contains | grep origin/master
-      - name: Setup SDK
-        uses: ./.github/workflows/actions/setup-sdk-and-tools
       - name: Set VERSION variable from tag
         run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+      - name: Scan File System Vulnerabilities
+        uses: ./.github/workflows/actions/scan-file-system-vulnerabilities
+      - name: Setup SDK
+        uses: ./.github/workflows/actions/setup-sdk-and-tools
       - name: Build
         uses: ./.github/workflows/actions/dotnet-build-release
       - name: Test
         uses: ./.github/workflows/actions/dotnet-test-release
       - name: Publish Packages
         uses: ./.github/workflows/actions/nuget-publish-all
+      - name: Publish Images
+        uses: ./.github/workflows/actions/docker-publish-all
