--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -11,8 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       NUGET_TOKEN: ${{ secrets.NUGET_TOKEN }}
-      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
     timeout-minutes: 15
     steps:
       - name: Checkout
@@ -35,3 +33,6 @@ jobs:
         uses: ./.github/workflows/actions/nuget-publish-all
       - name: Publish Images
         uses: ./.github/workflows/actions/docker-publish-all
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
