upload sarif action category added

--- a/.github/workflows/actions/docker-publish/action.yml
+++ b/.github/workflows/actions/docker-publish/action.yml
@@ -35,3 +35,4 @@ runs:
       uses: github/codeql-action/upload-sarif@v2
       with:
         sarif_file: sarif.${{ inputs.project-name }}.output.json
+        category: docker-scout-${{ inputs.project-name }}
