--- a/.github/workflows/actions/docker-publish/action.yml
+++ b/.github/workflows/actions/docker-publish/action.yml
@@ -12,6 +12,11 @@ runs:
       uses: docker/metadata-action@dbef88086f6cef02e264edb7dbf63250c17cef6c
       with:
           images: duranserkan/${{ inputs.image-repository-name }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
     - name: Build and push Docker image
       id: container-build-push
       uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
