--- a/DRN.Nexus.Hosted/DRN.Nexus.Hosted.csproj
+++ b/DRN.Nexus.Hosted/DRN.Nexus.Hosted.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>99c23e24-3647-4a56-9233-809ab46a643a</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
