--- a/Sample.Hosted/Properties/launchSettings.json
+++ b/Sample.Hosted/Properties/launchSettings.json
@@ -7,9 +7,10 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:5999;",
+      "applicationUrl": "http://localhost:5998;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_HTTP_PORTS": "5998;",
         "ASPNETCORE_HTTPS_PORT": "5999"
       }
     },
@@ -20,9 +21,9 @@
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_HTTP_PORT": "5998",
         "ASPNETCORE_HTTPS_PORT": "5999"
       },
-      "httpPort": 5999,
       "useSSL": true,
       "sslPort": 5999
     }
